--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
     "postbuild": "node scripts/generate-articles-data.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
+    "@vercel/blob": "^2.2.0",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "^15.2.0",
+    "next-auth": "^4.24.13",
+    "novel": "^1.0.2",
+    "pg": "^8.18.0",
+    "prisma": "^6.19.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^15.0.0",
     "rehype": "^13.0.2",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-prism": "^1.3.6",
     "rss-parser": "^3.13.0",
-    "unified": "^11.0.5"
+    "sharp": "^0.34.5",
+    "unified": "^11.0.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
